# trace

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  dummy_macros.rs
.github/workflows/: test.yml
examples/: trace.rs
src/: lib.rs  weak_on_trace.c  weak_on_trace.rs
src/tests/: mod.rs  trace_string_tests.rs  trace_tests.rs
trace-macro/: Cargo.toml
trace-macro/src/: lib.rs
